--- a/src/containers/Contact/styles.module.scss
+++ b/src/containers/Contact/styles.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   justify-content: center;
   height: 65vh;
+  overflow: hidden;
 }
 
 ._content {
