--- a/src/containers/Products/styles.module.scss
+++ b/src/containers/Products/styles.module.scss
@@ -5,8 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  overflow-y: hidden;
-
+  overflow: hidden;
 }
 
 ._content {
